# MinVRExtensions

./: .gitignore  CMakeLists.txt  Makefile
devices/MinVR_Oculus/: CMakeLists.txt  OculusPlugin.cpp  OculusRiftDisplay.cpp  OculusRiftDisplay.h  TestPlugin.cpp
devices/MinVR_Oculus/GL_old/: glext.h
devices/MinVR_Oculus/vrsetup/: oculus.vrsetup
devices/MinVR_TUIO/: CMakeLists.txt  InputDeviceTUIOClient.H  InputDeviceTUIOClient.cpp  TUIOPlugin.cpp  TuioDeviceDriver.cpp  TuioDeviceDriver.h
devices/MinVR_TUIO/tuio/: CMakeLists.txt
devices/MinVR_TUIO/vrsetup/: tuio-devices.xml  tuio.vrsetup
devices/MinVR_vrpn/: CMakeLists.txt  InputDeviceVRPNAnalog.H  InputDeviceVRPNAnalog.cpp  InputDeviceVRPNButton.H  InputDeviceVRPNButton.cpp  InputDeviceVRPNTracker.H  InputDeviceVRPNTracker.cpp  VrpnDeviceDriver.cpp  VrpnDeviceDriver.h  VrpnPlugin.cpp  VrpnTime.h
displays/MinVR_Dome/: CMakeLists.txt  DomeDeviceDriver.cpp  DomeDeviceDriver.h  DomeDisplay.cpp  DomeDisplay.h  DomePlugin.cpp
displays/MinVR_Dome/vrsetup/: dome.vrsetup
displays/MinVR_Web/: CMakeLists.txt  WebDeviceDriver.cpp  WebDeviceDriver.h  WebDisplay.cpp  WebDisplay.h  WebPlugin.cpp  WebSocketProtocol.c
displays/MinVR_Web/vrsetup/: web.vrsetup
test/MinVR_Test/: CMakeLists.txt  TestPlugin.cpp
